fix: change font size on mobile

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -62,12 +62,14 @@ body {
             letter-spacing: 3px;
             font-size: 4em;
             margin: 0;
+            cursor: default;
         }
 
         &-description {
             color: #aaa;
             margin: 0;
             font-size: 1em;
+            cursor: default;
         }
     }
 
